--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,9 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@v3.4.2
+      uses: gradle/gradle-build-action@v3.5.0
       with:
-        arguments: build
+        arguments: shadowJar
 
     #- name: Publish API
     #  continue-on-error: true
