update claim command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,9 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Build with Gradle
-      uses: gradle/gradle-build-action@v3.5.0
+      uses: gradle/actions/setup-gradle@v3
       with:
-        arguments: shadowJar
+        arguments: 'shadowJar'
 
     #- name: Publish API
     #  continue-on-error: true
