--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,5 +38,5 @@ jobs:
     - name: Upload NDailyRewards
       uses: actions/upload-artifact@v4.3.4
       with:
-        name: NDailyRewards Dev Artifacts
+        name: NDailyRewards
         path: "build/libs/NDailyRewards-*.jar"
