add setday permission to plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,5 +17,7 @@ permissions:
     default: true
   ndailyrewards.reload:
     default: op
+  ndailyrewards.setday:
+    default: op
   ndailyrewards.version:
     default: op
