--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,5 @@ description="Reward players for playing on your server"
 # Dependencies
 paper_api=1.19.4-R0.1-SNAPSHOT
 hikari_cp=5.1.0
+mariadb=3.4.1
 placeholder_api=2.11.6
