--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,7 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.commits[0].message, '[ci-skip]')"
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -20,13 +22,17 @@ jobs:
         distribution: 'temurin'
         cache: gradle
 
+    - name: Validate Gradle Wrapper
+      uses: gradle/actions/wrapper-validation@v3
+
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+
     - name: Make Gradlew executable
       run: chmod +x ./gradlew
 
     - name: Build with Gradle
-      uses: gradle/actions/setup-gradle@v3
-      with:
-        arguments: 'shadowJar'
+      run: ./gradlew shadowJar --stacktrace
 
     - name: Upload NDailyRewards
       uses: actions/upload-artifact@v4.3.6
