--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
+    - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Set up JDK
@@ -22,13 +22,17 @@ jobs:
         java-version: '17'
         cache: 'gradle'
 
+    - name: Validate Gradle Wrapper
+      uses: gradle/actions/wrapper-validation@v3
+
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+
     - name: Make Gradlew executable
       run: chmod +x ./gradlew
 
     - name: Build with Gradle
-      uses: gradle/actions/setup-gradle@v3
-      with:
-        arguments: 'shadowJar'
+      run: ./gradlew shadowJar --stacktrace
 
     - name: Upload to Modrinth
       uses: Kir-Antipov/mc-publish@v3.3
