--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Plugin properties
 group=space.bxteam
-version=3.0-SNAPSHOT
+version=3.0.0
 description="Reward players for playing on your server"
 
 # Dependencies
