--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,52 +30,6 @@ jobs:
     - name: Make Gradlew executable
       run: chmod +x ./gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew shadowJar --stacktrace
-
-    - name: Upload to Modrinth
-      uses: Kir-Antipov/mc-publish@v3.3
-      with:
-        modrinth-id: ZiFzQAnz
-        modrinth-featured: false
-        modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
-
-        files: |
-          build/libs/NDailyRewards-*.jar
-
-        name: ${{ github.event.release.name }}
-        version: ${{ github.event.release.tag_name }}
-        version-type: release
-        changelog: ${{ github.event.release.body }}
-
-        loaders: |
-          spigot
-          paper
-          purpur
-        game-versions: |
-          1.16.5
-          1.17.1
-          1.18
-          1.18.1
-          1.18.2
-          1.19
-          1.19.1
-          1.19.2
-          1.19.3
-          1.19.4
-          1.20
-          1.20.1
-          1.20.2
-          1.20.3
-          1.20.4
-          1.20.5
-          1.20.6
-          1.21
-          1.21.1
-        java: 17
-
     - name: Publish API
       continue-on-error: true
-      uses: gradle/gradle-build-action@v3.5.0
-      with:
-        arguments: publish -PndailyrewardsUsername=${{ secrets.REPO_USERNAME }} -PndailyrewardsPassword=${{ secrets.REPO_SECRET }}
+      run: ./gradlew publish -PndailyrewardsUsername=${{ secrets.REPO_USERNAME }} -PndailyrewardsPassword=${{ secrets.REPO_SECRET }}
