add close actions, custom gui buttons and reward on first join

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -45,6 +45,8 @@ database:
 events:
   # Whether a reward should automatically claim when a player joins (if available)
   auto-claim-reward: false
+  # Delay in seconds before the reward is automatically claimed
+  auto-claim-delay: 10
   # When player joins the server, should plugin open the reward GUI?
   open-gui-when-available: false
   # When player joins the server, should plugin notify player about available rewards?
@@ -54,6 +56,8 @@ events:
 rewards:
   # When a player reaches the day limit, should it reset to the first day?
   reset-when-all-claimed: true
+  # When player joins server for the first time, should the reward be available?
+  first-join-reward: true
   # Specify how many days the player has to wait to claim the reward again (in hours)
   cooldown: 24
   # Should next day unlock after midnight?
@@ -66,6 +70,7 @@ rewards:
   # [title] - sends primary title with entered text
   # [subtitle] - sends secondary title with entered text
   # [sound] - plays specified sound for the player (sound:volume:pitch)
+  # [close] - closes the inventory for the player
   # You can also use PlaceholderAPI placeholders (requires PlaceholderAPI plugin)
   # Note: First slot in inventory is 0, not 1
   days:
@@ -168,13 +173,14 @@ gui:
           - "&7You have not reached this day yet"
           - ""
           - "<reward-lore>"
-
-    other:
       filler:
         enable: true
         material: "GRAY_STAINED_GLASS_PANE:1"
         name: "&7"
-        lore: []
+        lore: [ ]
+
+    # Custom GUI items
+    custom: [ ]
 
 sound:
   open:
