[ci-skip] set snapshot version

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Plugin properties
 group=space.bxteam
-version=3.1.0
+version=3.2.0-SNAPSHOT
 description="Reward players for playing on your server"
 
 # Dependencies
