--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,12 @@ org.gradle.parallel=true
 
 # Plugin properties
 group=space.bxteam
-version=3.2.0-SNAPSHOT
+version=3.1.1-SNAPSHOT
 description="Reward players for playing on your server"
 
 # Dependencies
 paper_api=1.19.4-R0.1-SNAPSHOT
 hikari_cp=6.2.1
 mariadb=3.5.1
+commons=1.3.0
 placeholder_api=2.11.6
