--- a/gradle.properties
+++ b/gradle.properties
@@ -3,13 +3,13 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Plugin properties
-group=space.bxteam
-version=3.1.2
+group=org.bxteam
+version=3.1.3
 description="Reward players for playing on your server"
 
 # Dependencies
 paper_api=1.19.4-R0.1-SNAPSHOT
 hikari_cp=6.2.1
 mariadb=3.5.2
-commons=1.3.1
+commons=1.3.2
 placeholder_api=2.11.6
