--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     // Dependencies
     implementation("com.zaxxer:HikariCP:${project.hikari_cp}")
     implementation("org.mariadb.jdbc:mariadb-java-client:${project.mariadb}")
-    implementation("org.bxteam:commons-bukkit:${project.commons}")
+    implementation("org.bxteam:commons:${project.commons}")
     compileOnly("me.clip:placeholderapi:${project.placeholder_api}")
 }
 
@@ -82,8 +82,7 @@ tasks {
         dependencies {
             include(dependency("com.zaxxer:HikariCP:${project.hikari_cp}"))
             include(dependency("org.mariadb.jdbc:mariadb-java-client:${project.mariadb}"))
-            include(dependency("org.bxteam:commons-bukkit:${project.commons}"))
-            include(dependency("org.bxteam:commons-shared:${project.commons}"))
+            include(dependency("org.bxteam:commons:${project.commons}"))
 
             exclude("META-INF/NOTICE")
             exclude("META-INF/maven/**")
