--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: true
 contact_links:
-  - name: Pastes
-    url: https://pastes.dev
+  - name: ByteBin
+    url: https://bin.bxteam.org
     about: Use this link to paste your code if you are open a issue
   - name: Discord Support Server
-    url: https://discord.gg/p7cxhw7E2M
+    url: https://discord.gg/qNyybSSPm5
     about: Our support Discord, please ask questions and seek support here. RU and EN support
