--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,7 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Build with Gradle
-      run: ./gradlew shadowJar --stacktrace
+      run: ./gradlew build --stacktrace
 
     - name: Upload NDailyRewards
       uses: actions/upload-artifact@v4.6.2
