--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,3 +16,4 @@ mariadb = { module = "org.mariadb.jdbc:mariadb-java-client", version = "3.5.4" }
 commons-bukkit = { module = "org.bxteam:commons-bukkit", version = "3.0.0" }
 
 placeholderapi = { module = "me.clip:placeholderapi", version = "2.11.6" }
+bstats = { module = "org.bstats:bstats-bukkit", version = "3.1.0" }
