move api to own module

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ group=org.bxteam
 version=3.3.0
 description="Reward players for playing on your server"
 
+# Gradle properties
 org.gradle.jvmargs=-Xmx4G
 org.gradle.configuration-cache=true
 org.gradle.configureondemand=true
