--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,3 +16,6 @@ commons-bukkit = { module = "org.bxteam:commons-bukkit", version = "3.0.0" }
 
 placeholderapi = { module = "me.clip:placeholderapi", version = "2.11.6" }
 bstats = { module = "org.bstats:bstats-bukkit", version = "3.1.0" }
+guice = { module = "com.google.inject:guice", version = "7.0.0" }
+
+litecommands = { module = "dev.rollczi:litecommands-bukkit", version = "3.10.2" }
