--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,8 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ "master" ]
-  workflow_dispatch:
+  pull_request:
+    branches: [ "master" ]
 
 permissions:
   contents: read
@@ -23,9 +24,6 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: gradle
-
-    - name: Validate Gradle Wrapper
-      uses: gradle/actions/wrapper-validation@v4
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
