[ci-skip] update link to pastes.dev

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: true
 contact_links:
-  - name: ByteBin
-    url: https://bin.bxteam.org
+  - name: pastes.dev
+    url: https://pastes.dev
     about: Use this link to paste your code if you are open a issue
   - name: Discord Support Server
     url: https://discord.gg/qNyybSSPm5
