wow, folia working

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,7 @@ jobs:
           paper
           purpur
           spigot
+          folia
         game-versions: |
           >=1.16
         java: 17
