--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,23 +5,22 @@ ormlite = "6.1"
 guice = "5.1.0"
 
 [plugins]
-shadow = { id = "com.gradleup.shadow", version = "8.3.9" }
+shadow = { id = "com.gradleup.shadow", version = "9.0.1" }
 plugin-yml-bukkit = { id = "de.eldoria.plugin-yml.bukkit", version.ref = "plugin-yml" }
 run-server = { id = "org.bxteam.runserver", version = "1.2.1" }
 
 [libraries]
 paper = { module = "com.destroystokyo.paper:paper-api", version = "1.16.5-R0.1-SNAPSHOT" }
 paperlib = { module = "io.papermc:paperlib", version = "1.0.8" }
-quark-bukkit = { module = "org.bxteam.quark:bukkit", version = "1.0.0-SNAPSHOT" }
+quark-bukkit = { module = "org.bxteam.quark:bukkit", version = "1.0.0" }
 
 commons-bukkit = { module = "org.bxteam:commons-bukkit", version.ref = "commons" }
 commons-folia = { module = "org.bxteam:commons-folia", version.ref = "commons"}
-commons-lang3 = { module = "org.apache.commons:commons-lang3", version = "3.17.0"}
 
 ormlite = { module = "com.j256.ormlite:ormlite-core", version.ref = "ormlite" }
 ormlite-jdbc = { module = "com.j256.ormlite:ormlite-jdbc", version.ref = "ormlite" }
-hikari = { module = "com.zaxxer:HikariCP", version = "7.0.0" }
-mariadb = { module = "org.mariadb.jdbc:mariadb-java-client", version = "3.5.4" }
+hikari = { module = "com.zaxxer:HikariCP", version = "7.0.1" }
+mariadb = { module = "org.mariadb.jdbc:mariadb-java-client", version = "3.5.5" }
 
 placeholderapi = { module = "me.clip:placeholderapi", version = "2.11.6" }
 bstats = { module = "org.bstats:bstats-bukkit", version = "3.1.0" }
