--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ plugin-yml = "0.7.1"
 commons = "3.0.0"
 ormlite = "6.1"
 guice = "5.1.0"
-litecommands = "3.10.0"
+lamp = "4.0.0-rc.12"
 
 [plugins]
 shadow = { id = "com.gradleup.shadow", version = "9.0.1" }
@@ -30,8 +30,8 @@ lombok = { module = "org.projectlombok:lombok", version = "1.18.38" }
 guice = { module = "com.google.inject:guice", version.ref = "guice" }
 guice-assistedinject = { module = "com.google.inject.extensions:guice-assistedinject", version.ref = "guice" }
 
-litecommands-bukkit = { module = "dev.rollczi:litecommands-bukkit", version.ref = "litecommands" }
-litecommands-folia = { module = "dev.rollczi:litecommands-folia", version.ref = "litecommands" }
+lamp-common = { module = "io.github.revxrsal:lamp.common", version.ref = "lamp" }
+lamp-bukkit = { module = "io.github.revxrsal:lamp.bukkit", version.ref = "lamp" }
 
 [bundles]
 commons = [
@@ -49,7 +49,7 @@ guice = [
     "guice-assistedinject"
 ]
 
-litecommands = [
-    "litecommands-bukkit",
-    "litecommands-folia"
+lamp = [
+    "lamp-common",
+    "lamp-bukkit"
 ]
