--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 plugin-yml = "0.7.1"
-commons = "3.0.0"
 ormlite = "6.1"
 guice = "5.1.0"
 lamp = "4.0.0-rc.12"
@@ -15,8 +14,8 @@ paper = { module = "com.destroystokyo.paper:paper-api", version = "1.16.5-R0.1-S
 paperlib = { module = "io.papermc:paperlib", version = "1.0.8" }
 quark-bukkit = { module = "org.bxteam.quark:bukkit", version = "1.0.0" }
 
-commons-bukkit = { module = "org.bxteam:commons-bukkit", version.ref = "commons" }
-commons-folia = { module = "org.bxteam:commons-folia", version.ref = "commons"}
+helix = { module = "org.bxteam:helix", version = "1.0.0" }
+maven-artifact = { module = "org.apache.maven:maven-artifact", version = "3.9.11" }
 
 ormlite = { module = "com.j256.ormlite:ormlite-core", version.ref = "ormlite" }
 ormlite-jdbc = { module = "com.j256.ormlite:ormlite-jdbc", version.ref = "ormlite" }
@@ -24,7 +23,6 @@ hikari = { module = "com.zaxxer:HikariCP", version = "7.0.2" }
 mariadb = { module = "org.mariadb.jdbc:mariadb-java-client", version = "3.5.5" }
 
 placeholderapi = { module = "me.clip:placeholderapi", version = "2.11.6" }
-bstats = { module = "org.bstats:bstats-bukkit", version = "3.1.0" }
 lombok = { module = "org.projectlombok:lombok", version = "1.18.38" }
 
 guice = { module = "com.google.inject:guice", version.ref = "guice" }
@@ -34,11 +32,6 @@ lamp-common = { module = "io.github.revxrsal:lamp.common", version.ref = "lamp" 
 lamp-bukkit = { module = "io.github.revxrsal:lamp.bukkit", version.ref = "lamp" }
 
 [bundles]
-commons = [
-    "commons-bukkit",
-    "commons-folia"
-]
-
 ormlite = [
     "ormlite",
     "ormlite-jdbc"
